--- a/src/main/resources/templates/gr/customer/myinfochk.html
+++ b/src/main/resources/templates/gr/customer/myinfochk.html
@@ -170,107 +170,12 @@
         #submenu .submenu-closer {
             border-top: 1px solid #e5e5e5;
             margin: 0px 0px;
-
         }
 
-        /* 마이페이지 메인 */
-        .mypagemain .grade{
-            width: 1240px;
-            padding: 36px 0;
-            margin-bottom: 60px;
-            background-color: #f8f8f8;
-        }
 
-        .mypagemain .grade .info{
-            width: 670px;
-            height: 95px;
-            float: left;
-            padding-left: 250px;
-            position: relative;
-        }
 
-        .mypagemain .grade .info h3{
-            font-size: 23px;
-            letter-spacing: .18px;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
 
-        .mypagemain .grade .info a{
-            font-size: 20px;
-            line-height: 20px;
-            letter-spacing: .18px;
-            /* padding-top: 10px; */
-        }
 
-        .mypagemain .grade .info .member-icon{
-            position: absolute;
-            top: 5px;
-            left: 80px;
-        }
-        
-        /* 관심물품관련 상품 나오기 */
-        .mypage_likeitem .table_title{
-            width: 1240px;
-            border-bottom: 3px solid #000;
-            padding-bottom: 10px;
-            margin-bottom: 15px;
-            position: relative;
-            height: 50px;
-        }
-        
-        .mypage_likeitemitems .likeitem_items{
-            width: 1240px;
-            padding-top: 15px;
-            /* padding-bottom: 150px; */
-            border-bottom: 3px solid #000;
-        }
-
-        .mypage_likeitemitems .likeitem_items ul li{
-            width: 150px;
-            margin-left: 50px;
-            margin-right: 40px;
-            float: left;
-            margin-bottom: 50px;
-            position: relative;
-        }
-
-        .mypage_likeitemitems .likeitem_items ul li a{
-            vertical-align: middle;
-            text-decoration: none;
-        }
-
-        .mypage_likeitemitems .likeitem_items ul li .img{
-            height: 253px;
-            position: relative;
-            margin-bottom: 20px;
-
-        }
-
-        .mypage_likeitemitems .likeitem_items ul li .text{
-            padding: 0 4px 0 6px;
-        }
-
-        .mypage_likeitemitems .likeitem_items ul li .text .title{
-            font-size: 18px;
-            line-height: 20px;
-            margin:  0 0 12px 0 !important;
-            width: auto;
-            min-height: auto;
-            max-height: initial;
-            text-decoration: none;
-            color: #000;
-        }
-
-        .mypage_likeitemitems .likeitem_items ul li .text .price{
-            position: relative;
-            line-height: normal;
-            margin-bottom: 14px;
-            align-items: baseline;
-            text-decoration: none;
-            color: #000;
-            font-weight: bold;
-        }
 
 
 
@@ -288,7 +193,7 @@
     <th:block th:replace="~{/se/customer/header :: headerHTML}"></th:block>
     
     <!-- 본문 영역 (padding-bottom은 건들면 안돼요ㅠㅠ footer랑 겹치는 문제 해결용임돵) -->
-    <div style="padding-bottom: 600px;">
+    <div style="padding-bottom: 300px;">
         <div class="myPageHeader" style="padding-top: 60px; ">
             <a href="/SOBUN/customer/mypage.do" class="title">MY PAGE</a><br/>
 
@@ -297,7 +202,11 @@
                     <a href="#" class="semi-title">HOME</a>
                     &nbsp;&nbsp;>&nbsp;&nbsp;
                     <a href="#" class="semi-title">MY PAGE</a>
-                    &nbsp;&nbsp;>
+                    &nbsp;&nbsp;>&nbsp;&nbsp;
+                    <a href="#" class="semi-title">정보관리</a>
+                    &nbsp;&nbsp;>&nbsp;&nbsp;
+                    <a href="#" class="semi-title">회원정보 수정</a>
+                    &nbsp;&nbsp;
                 </li>
             </ol>
         </div>
@@ -348,86 +257,18 @@
             </div>
         </div>
 
-        <!-- 마이페이지 내용 -->
-        <div class="mypagemain d-flex justify-content-center">
-            <div class="grade ">
-                <div class="info">
-                    <span class="member-icon"><img th:src="@{/images/gr/membericon.png}" width="100px" height="100px"></span>
-                    <h3>00님 안녕하세요.</h3>
-                    <a>전체 공구 참여 횟수 </a><a th:text="${ret}"></a><a>건 입니다. ♡</a>
-
-                </div>
+        <div class="myinfochk">
+            <div class="title">
+                <h3>비밀번호 확인</h3>
             </div>
         </div>
-
-        <!-- 관련물품 내용 -->
-        <div class="mypage_likeitem d-flex justify-content-center">
-            <div class="table_title">
-                <h3>~님이 관심있어할 상품이에요!</h3>
-            </div>
+        <div class="passwordchk-o">
+            <p>회원님의 안전한 개인정보 보호를 위해 비밀번호를 다시 한번 확인합니다.</p>
         </div>
 
-        <div class="mypage_likeitemitems d-flex justify-content-center">
-            <div class="likeitem_items" >
-                <ul>
-                    <li>
-                        <a href="#">
-                            <div class="img">
-                                <img src="../images/gr/">
-                            </div>
-                            <div class="text">
-                                <div class="title">판매상품이름</div>
-                                <div class="price">판매상품 가격</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img">
-                                <img src="../images/gr/">
-                            </div>
-                            <div class="text">
-                                <div class="title">판매상품이름</div>
-                                <div class="price">판매상품 가격</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img">
-                                <img src="../images/gr/">
-                            </div>
-                            <div class="text">
-                                <div class="title">판매상품이름</div>
-                                <div class="price">판매상품 가격</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img">
-                                <img src="../images/gr/">
-                            </div>
-                            <div class="text">
-                                <div class="title">판매상품이름</div>
-                                <div class="price">판매상품 가격</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="img">
-                                <img src="../images/gr/">
-                            </div>
-                            <div class="text">
-                                <div class="title">판매상품이름</div>
-                                <div class="price">판매상품 가격</div>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+
+
+
         
 
     </div>
