--- a/src/main/resources/static/css/km/selectitem.css
+++ b/src/main/resources/static/css/km/selectitem.css
@@ -911,6 +911,26 @@ tbody::-webkit-scrollbar-track {
 	font-size: 15px;
 }
 
-  
+.single_product_image_background img {
+	padding-top: 10px !important;
+	width: 500px;
+}
+
+#select {
+	width: 180px;
+	padding: 10px;
+	padding-left: 12px;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	box-sizing: border-box;
+	font-size: 12px;
+	color: #000;
+	outline: none;
+	margin-left: 160px;
+	position: absolute;
+}
+#select:hover {
+	border: 1px solid #aaa;
+}
   
 
