--- a/src/main/resources/templates/km/customer/selectitem.html
+++ b/src/main/resources/templates/km/customer/selectitem.html
@@ -15,27 +15,22 @@
     <!-- <link rel="stylesheet" type="text/css" th:href="@{/css/km/single_styles.css}"> -->
     <link rel="stylesheet" type="text/css" th:href="@{/css/km/single_responsive.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/km/selectitem.css}">
-
     <!-- font-awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
-        .single_product_image_background img {
-            padding-top: 10px !important;
-            width: 500px;
+        input {
+            display: none;
         }
     </style>
-
 
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <!-- axios (https://cdnjs.com/libraries/axios) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"
         integrity="sha512-nnNHpffPSgINrsR8ZAIgFUIMexORL5tPwsfktOTxVYSv+AUAILuFYWES8IHl+hhIhpFGlKvWFiz9ZEusrPcSBQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-
 </head>
 
 <body>
@@ -100,9 +95,9 @@
                                             <th scope="col">공구참여</th>
                                         </tr>
                                     </thead>
-                                    <tbody id="tbody">
-
-                                    </tbody>
+                                        <tbody id="tbody">
+                                         
+                                        </tbody>
                                 </table>
                             </div>
                             <!-- ~ 열린 공구 영역 -->
@@ -124,31 +119,40 @@
                                                         aria-label="Close"></button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <!-- <input type="number" name="participant" value="2" id="participant" min="2" max="5"> -->
-                                                    <div class="modal-participant">
-                                                        <span>참여인원</span>
-                                                        <span class="minus">-</span>
-                                                        <span class="participant">2</span>
-                                                        <span class="plus">+</span>
-                                                    </div>
+                                                    <form th:action="@{/customer/item/selectone.do}" method="post" id="form2">
+                                                        <div class="modal-participant">
+                                                            <span>참여인원</span>
+                                                            <span class="minus">-</span>
+                                                            <span class="participant">2</span>
+                                                            <input type="hidden" name="participant" value="2" id="input-participant">
+                                                            <span class="plus">+</span>
+                                                        </div>
 
-                                                    <div class="modal-storage">
-                                                        <span>수령지점</span>
-                                                        <select id="select">
-                                                            
-                                                        </select>
-                                                    </div>
-                                                    
-                                                    <div class="modal-totalcost">
-                                                        <span>인당 물품가격</span>
-                                                        <span id="totalcost"></span>
-                                                    </div>
-
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button class="btn open-btn" data-bs-target="#exampleModalToggle2"
-                                                        data-bs-toggle="modal">개설하기</button>
-                                                </div>
+                                                        <div class="modal-storage" th:object="${storage}">
+                                                            <span>수령지점</span>
+                                                            <select id="select" th:field = ${storage}>
+                                                                <option selected>---[필수 입력]---</option>
+                                                                <option th:each="tmp:${storage}" name="storageNo" th:value="${tmp.no}" th:text="${tmp.name}"></option>
+                                                            </select>
+                                                        </div>
+                                                        <!-- <div class="modal-storage">
+                                                            <span>수령지점</span>
+                                                            <select id="select" >
+                                                                
+                                                            </select>
+                                                        </div> -->
+                                                        
+                                                        <div class="modal-totalcost">
+                                                            <span>인당 물품가격</span>
+                                                            <span id="totalcost"></span>
+                                                        </div>
+                                                        <input type="hidden" name="itemNo" th:value="${item.ITEMNO}">
+                                                        
+                                                        </div>
+                                                    </form>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn open-btn" onclick="openPurchase()">개설하기</button>
+                                                        </div>
                                             </div>
                                         </div>
                                     </div>
@@ -299,8 +303,11 @@
         </div>
     </div>
 
+
     <!-- footer -->
     <th:block th:replace="~{/km/customer/footer :: footerHTML}"></th:block>
+
+
 
 
 
@@ -355,45 +362,46 @@
                 var deadline = new Date(tmp.deadline);
                 CountDownTimer(deadline, `clock${i}`);
 
-                var price = Math.floor(itemprice / tmp.participant);
-                var price1 = price.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ",") + '원';
+                var totalPrice = Math.floor(itemprice / tmp.participant);
+                var price1 = totalPrice.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ",") + '원';
 
                 console.log(tmp.deadline);
-                console.log(price);
-                console.log(price1);
+                console.log(totalPrice);
+                // console.log(price1);
 
                 tbody.innerHTML +=
-                    `<tr>` +
-                    `<td scope="row">${tmp.purchaseNo}</td>` +
-                    `<td scope="row">${tmp.participant}</td>` +
-                    `<td>${tmp.remainingPerson}</td>` +
-                    `<td>${tmp.storageName}</td>` +
-                    `<td>` + price1 + `</td>` +
-                    '<td id="clock' + i + '">' + deadline + '</td>' +
-                    `<td><button class="btn participant-btn">참여</button></td>` +
-                    `</tr>`;
+                        `<tr>` +
+                        `<td scope="row">${tmp.purchaseNo}</td>` +
+                        `<input type="text" name="purchaseNo" value="${tmp.purchaseNo}">` + 
+                        `<td scope="row">${tmp.participant}</td>` +
+                        `<td>${tmp.remainingPerson}</td>` +
+                        `<td>${tmp.storageName}</td>` +
+                        `<td>` + price1 + `</td>` +
+                        '<td id="clock' + i + '">' + deadline + '</td>' +
+                        `<td><button class="btn participant-btn" onclick="participate(${tmp.purchaseNo},${Math.floor(itemprice / tmp.participant)})">참여</button></td>` +
+                        `</tr>`;
             };
         };
 
         // 공구개설 Modal -> select박스 추가
-        var select = document.querySelector('#select');
-        select.innerHTML = ''; // 초기화 해주기
-        const storageList = /*[[${storage}]]*/"";
+        // var select = document.querySelector('#select');
+        // select.innerHTML = ''; // 초기화 해주기
+        // const storageList = /*[[${storage}]]*/"";
 
-        console.log(storageList)
-        // 하나씩 꺼내기
-        select.innerHTML += `<option selected>국적선택</option>`;
-        if (storageList != null) {
-            for (let i = 0; i < storageList.length; i++) {
+        // console.log(storageList)
+        // // 하나씩 꺼내기
+        // select.innerHTML += `<option selected>지점 선택</option>`;
+        // if (storageList != null) {
+        //     for (let i = 0; i < storageList.length; i++) {
 
-                let tmp = storageList[i];
+        //         let tmp = storageList[i];
 
-                console.log(tmp.name)
+        //         console.log(tmp.name)
 
-                select.innerHTML +=
-                        `<option>${tmp.name}</option>`;
-            };
-        };
+        //         select.innerHTML +=
+        //                 `<option name="storageNo" value="${tmp.no}">${tmp.name}</option>`;
+        //     };
+        // };
 
         // 공구개설 Modal -> participant 숫자 증감
         const plus = document.querySelector(".plus");
@@ -403,27 +411,93 @@
 
         var totalcost = document.querySelector('#totalcost');
         totalcost.innerHTML = (itemprice/2).toLocaleString() + '원';
+        var input_participant = document.querySelector('#input-participant');
         
         plus.addEventListener("click", () => {
             if (a < 5) {
                 a++;
                 participant.innerHTML = a;
+                input_participant.value = a;
             } else {
                 alert('최대 5명까지만 선택 가능합니다.')
             }
             totalcost.innerHTML =  (itemprice/a).toLocaleString() + '원';
-            console.log(a);
+            console.log(input_participant.value);
         })
         minus.addEventListener("click", () => {
             if (a > 2) {
                 a--;
                 participant.innerHTML = a;
+                input_participant.value = a;
             } else {
                 alert('2명 이상 선택 가능합니다.')
             }
             totalcost.innerHTML =  (itemprice/a).toLocaleString() + '원';
-            console.log(a);
+            console.log(input_participant.value);
         });
+
+        const itemNO = /*[[${item.ITEMNO}]]*/"";
+        
+        // 공구 개설 버튼
+        function openPurchase() {
+            // participante는 위의 addEventListener에서 처리함
+            if( confirm('공구 개설하시겠습니까?') ) {
+                // const form = ;
+
+                document.querySelector('#form2').submit();
+            } else {
+                return;
+            }
+                
+        }
+
+        
+        
+
+        // 공구 참여 버튼
+        function participate(purchaseNo) {
+            console.log(purchaseNo);
+
+            if( confirm('공구 참여하시겠습니까?') ) {
+                const form = document.createElement("form");
+                form.action = /*[[@{/customer/item/selectone.do}]]*/"";
+                form.style.display = "none";
+                form.method = "post";
+
+                const input1 = document.createElement("input");
+                input1.type = "hidden";
+                input1.name = "_csrf";
+                input1.value = /*[[${_csrf.token}]]*/"";
+
+                const input2 = document.createElement("input");
+                input2.type = "hidden";
+                input2.name = "purchaseNo";
+                input2.value = purchaseNo;
+
+                // const input3 = document.createElement("input");
+                // input3.type = "hidden";
+                // input3.name = "pricePerOne";
+                // input3.value = pricePerOne;
+
+                // const input4 = document.createElement("input");
+                // input4.type = "hidden";
+                // input4.name = "itemNo";
+                // input4.value = itemNO;
+
+                form.appendChild(input1);
+                form.appendChild(input2);
+                // form.appendChild(input3);
+                // form.appendChild(input4);
+
+                document.body.appendChild(form);
+
+                form.submit();
+            } else {
+                return;
+            }
+        }
+
+        
     </script>
 
 
