--- a/src/main/resources/templates/se/customer/header.html
+++ b/src/main/resources/templates/se/customer/header.html
@@ -55,16 +55,7 @@
             border: 1px solid #204710;
             border-radius: 1px;
         }
-
-        /* 카테고리 - 전체 물품 버튼 */
-        .allItemBtn {
-            /* margin: 15px 0px 0px 50px;
-            height: 35px;
-            padding: 4px;
-            padding-top: 8px;
-            border-radius: 1px; */
-        }
-
+        
         /* 헤더 */
         .header1 {
             background-size: cover;
@@ -315,7 +306,7 @@
         <header id="header2" class="container-fluid">
             <div class="row p-3">
                 <div class="col-auto d-flex align-items-center m-0 ps-5 pe-2">
-                    <a href="#"><img th:src="@{/images/se/logo2.png}" style="height: 45px;"></a>
+                    <a href="#"><img th:src="@{/images/se/header2logo.png}" style="height: 45px;"></a>
                 </div>
                 <div class="col">
                     <form th:action="@{/customer/item/selectlist.do}" method="get" class="d-flex position-relative">
