--- a/src/main/resources/templates/se/customer/home.html
+++ b/src/main/resources/templates/se/customer/home.html
@@ -35,15 +35,22 @@
             </th:block>
             <hr>
 
-            기한이 얼마 안 남은 공구 (최대 5개)
+            기한이 얼마 안 남은 공구 (최대 5개) // 로그인시 8개
             <hr>
-            <th:block th:each=" map : ${deadList} ">
-                <th:block th:text="${map.PRICE}"></th:block>
-                <img th:src="@{/customer/seimage(itemno=${map.ITEMNO})}" style="width: 100px;">
+            <th:block th:each=" deadMap : ${deadList} ">
+                <th:block th:text="${deadMap.PRICE}"></th:block>
+                <th:block th:text="|D-${deadMap.DDAY}|"></th:block>
+                <img th:src="@{/customer/seimage(itemno=${deadMap.ITEMNO})}" style="width: 100px;">
             </th:block>
             <hr>
 
             <!-- 로그인 -->
+            내 주위 실시간 공구 (최대 5개)
+            <hr>
+            <th:block th:each=" aroundMap : ${aroundList} ">
+                <th:block th:text="${aroundMap.PRICE}"></th:block>
+                <img th:src="@{/customer/seimage(itemno=${aroundMap.ITEMNO})}" style="width: 100px;">
+            </th:block>
 
 
         </div>
