--- a/src/main/resources/templates/se/customer/login.html
+++ b/src/main/resources/templates/se/customer/login.html
@@ -15,6 +15,7 @@
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <!-- axios (https://cdnjs.com/libraries/axios) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js" integrity="sha512-nnNHpffPSgINrsR8ZAIgFUIMexORL5tPwsfktOTxVYSv+AUAILuFYWES8IHl+hhIhpFGlKvWFiz9ZEusrPcSBQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </head>
 
 <body>
@@ -23,14 +24,25 @@
     
     <!-- 본문 영역 (padding-bottom은 건들면 안돼요ㅠㅠ footer랑 겹치는 문제 해결용임돵) -->
     <div style="padding-bottom: 300px;">
+
         <div class="container">
-        <form th:action="@{/customer/loginaction.do}" method="post">
-            <input type="text" name="id" placeholder="아이디" autofocus>
-            <input type="password" name="pw" placeholder="암호">
-            <input type="submit" value="로그인">
-        </form>
+
+            <form th:action="@{/customer/loginaction.do}" method="post">
+                <input type="text" name="id" placeholder="아이디" autofocus>
+                <input type="password" name="pw" placeholder="암호">
+                <input type="submit" value="로그인">
+            </form>
+
+            <!-- 카카오로그인...화이팅 -->
+            <a id="kakao-login-btn" href="javascript:loginWithKakao()">
+                <img src="https://k.kakaocdn.net/14/dn/btroDszwNrM/I6efHub1SN5KCJqLm1Ovx1/o.jpg" width="222" alt="카카오 로그인 버튼" />
+            </a>
+            <button onclick="logoutWithKakao()">로그아웃</button>
+
         </div>
+
     </div>
+
 
     <!-- footer -->
     <th:block th:replace="~{/km/customer/footer :: footerHTML}"></th:block>
@@ -38,6 +50,60 @@
 
 
     <!-- script-->
+    <!-- 카카오 로그인 -->
+    <script src = "https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <script>
+		Kakao.init('f37acd51f39500af41a1f590e928481e'); // 카카오 JavaScript 키 입력
+	
+		function loginWithKakao() {
+			 Kakao.Auth.login({
+			 	success: function(authObj) {
+			 		console.log('authObj', authObj);
+			 		Kakao.API.request({
+						url: '/v2/user/me',
+						success: function(response) {
+							console.log('response', response);
+							alert('로그인 성공');
+                            console.log(response.properties.nickname);
+                            console.log(response.kakao_account.email);
+                            console.log(response.kakao_account.gender);
+
+                            if(response.kakao_account.email == null || response.kakao_account.gender == null){
+                                alert('이메일, 성별 정보를 체크해주세요');
+                                logoutWithKakao();
+                            }
+                    
+
+							// 성공시 이동할 페이지
+							// location.href="http://127.0.0.1:5959/SOBUN/customer/kakaologin.do?code=" + authObj.access_token;
+						}
+					})
+		        },
+		        fail: function(err) {
+					alert(JSON.stringify(err));
+		        }
+			});
+		}
+		
+		
+		function logoutWithKakao(){
+			 if (Kakao.Auth.getAccessToken()) {
+				
+				 Kakao.API.request({
+					url: '/v1/user/unlink',
+					success: function (response) {
+						console.log(response)
+					},
+					fail: function (error) {
+					  console.log(error)
+					},
+				});
+				
+				Kakao.Auth.setAccessToken(null);
+			 }
+		}
+
+	</script>
     
 </body>
 </html>
