--- a/src/main/resources/templates/jk/seller/navbar.html
+++ b/src/main/resources/templates/jk/seller/navbar.html
@@ -1,4 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <!-- 1. Bootstrap용 css CDN 추가 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
@@ -14,95 +21,110 @@
     <!-- CSS -->
     <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/seller.css}'>
 </head>
-<nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-        <div class="sb-sidenav-menu">
-            <div class="nav">
-                <!-- <div class="sb-sidenav-menu-heading">정보수정</div>
-                <a class="nav-link" href="./index.html">
-                    <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                    내 업체 관리
-                </a> -->
-                <div class="sb-sidenav-menu-heading">마이페이지</div>
-                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                    data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
-                    <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                    내 업체 관리
-                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                </a>
-                <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
-                    data-bs-parent="#sidenavAccordion">
-                    <nav class="sb-sidenav-menu-nested nav">
-                        <a class="nav-link" href="#!">업체정보 수정하기</a>
-                        <a class="nav-link" href="#!">비밀번호 변경</a>
-                        <a class="nav-link" href="#!">탈퇴하기</a>
-                    </nav>
+
+<body>
+    <th:block th:fragment="navbarHTML">
+        <div id="layoutLeftSide">
+            <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                <div class="sb-sidenav-menu">
+                    <div class="nav">
+
+                        <div class="sb-sidenav-menu-heading">마이페이지</div>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                            data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                            <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                            내 업체 관리
+                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                        </a>
+                        <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
+                            data-bs-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a class="nav-link" th:href="@{/seller/updateinfo.do}">업체정보 수정하기</a>
+                                <a class="nav-link" th:href="@{/seller/updatepw.do}">비밀번호 변경</a>
+                            </nav>
+                        </div>
+
+                        <div class="sb-sidenav-menu-heading">주문배송 조회하기</div>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                            data-bs-target="#collapseLayouts2" aria-expanded="false" aria-controls="collapseLayouts2">
+                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                            주문 & 배송
+                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                        </a>
+                        <div class="collapse" id="collapseLayouts2" aria-labelledby="headingOne"
+                            data-bs-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a class="nav-link" href="#!">주문</a>
+                                <a class="nav-link" href="#!">배송</a>
+                            </nav>
+                        </div>
+
+                        <div class="sb-sidenav-menu-heading">물품관리페이지</div>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                            data-bs-target="#collapseLayouts3" aria-expanded="false" aria-controls="collapseLayouts3">
+                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                            물품
+                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                        </a>
+                        <div class="collapse" id="collapseLayouts3" aria-labelledby="headingOne"
+                            data-bs-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a class="nav-link" href="#!">등록</a>
+                                <a class="nav-link" href="#!">관리</a>
+                            </nav>
+                        </div>
+
+                    </div>
                 </div>
-                <div class="sb-sidenav-menu-heading">주문배송 조회하기</div>
-                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                    data-bs-target="#collapseLayouts2" aria-expanded="false" aria-controls="collapseLayouts2">
-                    <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                    주문 & 배송
-                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                </a>
-                <div class="collapse" id="collapseLayouts2" aria-labelledby="headingOne"
-                    data-bs-parent="#sidenavAccordion">
-                    <nav class="sb-sidenav-menu-nested nav">
-                        <a class="nav-link" href="#!">주문</a>
-                        <a class="nav-link" href="#!">배송</a>
-                    </nav>
+                <div class="sb-sidenav-footer">
+                    <div class="sample">환영합니다, ### 님!</div>
                 </div>
-                <div class="sb-sidenav-menu-heading">물품관리페이지</div>
-    
-                <a class="nav-link" href="#!">
-                    <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                    물품정보
-                </a>
-            </div>
+            </nav>
         </div>
-        <div class="sb-sidenav-footer">
-            <div class="sample">Logged in as :</div>
-            Start Bootstrap
-        </div>
-    </nav>
-<!-- 6. Bootstrap용 js -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-crossorigin="anonymous"></script>
-<!-- Chart.js용 CDN -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-<script src="js/chart-area-demo.js"></script>
-<script src="js/chart-bar-demo.js"></script>
-<script src="js/chart-pie-demo.js"></script>
-<!-- Simple DataTable용 JS CDN -->
-<script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
-<!-- jQuery 추가 -->
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"
-integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-<!-- font awesome용 스크립트 CDN -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"
-integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
-crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>
-        
+    </th:block>
 
-    $(document).ready(function () {
-        const sidebarToggle = $('#sidebarToggle');
-        if (sidebarToggle) {
-            sidebarToggle.click(function () {
-                console.log('buttonClick');
-                event.preventDefault(); /* 아래쪽 요소로 이벤트가 전파되지 않도록 */
-                document.body.classList.toggle('sb-sidenav-toggled');
-                localStorage.setItem('sb|sidebar-toggle', document.body.classList.contains('sb-sidenav-toggled'));
-            });
-        }
-    });
+    <!-- 6. Bootstrap용 js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+        crossorigin="anonymous"></script>
+    <!-- Chart.js용 CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+    <script src="js/chart-area-demo.js"></script>
+    <script src="js/chart-bar-demo.js"></script>
+    <script src="js/chart-pie-demo.js"></script>
+    <!-- Simple DataTable용 JS CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
+    <!-- jQuery 추가 -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <!-- font awesome용 스크립트 CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"
+        integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
 
 
-    $(document).ready(function () {
-        new simpleDatatables.DataTable("#datatablesSimple", {
-            searchable: true,
-            fixedHeight: true,
+        $(document).ready(function () {
+            const sidebarToggle = $('#sidebarToggle');
+            if (sidebarToggle) {
+                sidebarToggle.click(function () {
+                    console.log('buttonClick');
+                    event.preventDefault(); /* 아래쪽 요소로 이벤트가 전파되지 않도록 */
+                    document.body.classList.toggle('sb-sidenav-toggled');
+                    localStorage.setItem('sb|sidebar-toggle', document.body.classList.contains('sb-sidenav-toggled'));
+                });
+            }
+        });
 
-        })
-    });
-</script>
+
+        $(document).ready(function () {
+            new simpleDatatables.DataTable("#datatablesSimple", {
+                searchable: true,
+                fixedHeight: true,
+
+            })
+        });
+    </script>
+</body>
+
+</html>
