header, footer, navbar 연결, ItemMapper

--- a/src/main/resources/templates/mj/seller/iteminsert.html
+++ b/src/main/resources/templates/mj/seller/iteminsert.html
@@ -164,7 +164,7 @@
                                 <!-- <option value="">-- Select Small Category --</option> -->
                             </select><br>
                         </div>
-                        <!-- 소분류코드 파라미터전달받기 -->
+                        <!-- 소분류코드 파라미터전달받기 hidden-->
                         <input type="hidden" name="scategoryCode" th:value = ${param.scate} />
                         
                         <div class="input-group mb-3">
