--- a/src/main/resources/templates/mj/seller/management.html
+++ b/src/main/resources/templates/mj/seller/management.html
@@ -26,110 +26,13 @@
 </head>
 
 <body class="sb-nav-fixed">
-    <!-- 네비게이션 영역 -->
-    <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-        <!-- Navbar Brand -->
-        <a class="navbar-brand ps-3" href="#">
-            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tools"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.27 3.27a.997.997 0 0 0 1.414 0l1.586-1.586a.997.997 0 0 0 0-1.414l-3.27-3.27a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3c0-.269-.035-.53-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814L1 0Zm9.646 10.646a.5.5 0 0 1 .708 0l2.914 2.915a.5.5 0 0 1-.707.707l-2.915-2.914a.5.5 0 0 1 0-.708ZM3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026L3 11Z" />
-                </svg> -->
-            <img src="../../images/mj/logo1.png" style="width: 80px;" />
-            <strong>판매자 페이지</strong>
-        </a>
-
-        <!-- SideBar Toggle -->
-        <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" type="button">
-            <i class="bi bi-menu-up"></i>
-        </button>
-
-        <!-- serach bar ( 사이드바 토글버튼 우측 고정용 ) -->
-        <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
-            <div class="input-group">
-                <!-- <input class="form-control" type="text" placeholder="검색어 입력 ..." aria-label="검색어 입력 ..."
-                        aria-describedby="btnSearch">
-                    <button class="btn btn-primary" id="btnSearch" type="submit" type="submit"><i
-                            class="bi bi-search"></i></button> -->
-            </div>
-        </form>
-
-        <!-- Profile 영역 -->
-        <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-            <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" id="profile" href="#" role="button"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bi bi-person-circle"></i></a>
-                <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="profile">
-                    <li><a class="dropdown-item" href="#!">계정 설정</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#!">로그아웃</a></li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
+    <!-- header -->
+    <th:block th:replace="~{/mj/seller/header :: headerHTML}"></th:block>
     <!-- 전체화면 영역 -->
     <div id="layoutTotal">
         <!-- 전체화면 > 좌측 메뉴 영역(사이드바) -->
-        <div id="layoutLeftSide">
-            <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-                <div class="sb-sidenav-menu">
-                    <div class="nav">
+        <th:block th:replace="~{/mj/seller/navbar :: navbarHTML}"></th:block>
 
-                        <div class="sb-sidenav-menu-heading">마이페이지</div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                            data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
-                            <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                            내 업체 관리
-                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                        </a>
-                        <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
-                            data-bs-parent="#sidenavAccordion">
-                            <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" th:href="@{/seller/updateinfo.do}">업체정보 수정하기</a>
-                                <a class="nav-link" th:href="@{/seller/updatepw.do}">비밀번호 변경</a>
-                                <a class="nav-link" th:href="@{/seller/unregister.do}">탈퇴하기</a>
-                            </nav>
-                        </div>
-
-                        <div class="sb-sidenav-menu-heading">주문배송 조회하기</div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                            data-bs-target="#collapseLayouts2" aria-expanded="false" aria-controls="collapseLayouts2">
-                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                            주문 & 배송
-                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                        </a>
-                        <div class="collapse" id="collapseLayouts2" aria-labelledby="headingOne"
-                            data-bs-parent="#sidenavAccordion">
-                            <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" th:href="@{/seller/order/search.do}">주문</a>
-                                <a class="nav-link" th:href="@{/seller/delivery/search.do}">배송</a>
-                            </nav>
-                        </div>
-
-                        <div class="sb-sidenav-menu-heading">물품관리페이지</div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                            data-bs-target="#collapseLayouts3" aria-expanded="false" aria-controls="collapseLayouts3">
-                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                            물품
-                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                        </a>
-                        <div class="collapse" id="collapseLayouts3" aria-labelledby="headingOne"
-                            data-bs-parent="#sidenavAccordion">
-                            <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" th:href="@{/seller/item/management.do}">관리</a>
-                                <a class="nav-link" th:href="@{/seller/item/search.do}">통계</a>
-                            </nav>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="sb-sidenav-footer">
-                    <div class="sample">환영합니다, ### 님!</div>
-                </div>
-            </nav>
-        </div>
         <!-- 전체화면 > 우측 메인화면 영역 -->
         <div id="layoutContent">
             <main>
@@ -152,7 +55,6 @@
                             <option value="000">전체</option>
                             <option th:each="obj1 : ${cate.Mlist}" th:value="${obj1.code.longValue()}"
                                 th:text="${obj1.name}"></option>
-                            <!-- <option value="">-- Select Middle Category --</option> -->
                         </select>
 
                         <select class="form-select" aria-label="Default select example" id="ScateSelect"
@@ -160,19 +62,22 @@
                             <option value="000">전체</option>
                             <option th:each="obj2 : ${cate.Slist}" th:value="${obj2.code.longValue()}"
                                 th:text="${obj2.name}"></option>
-                            <!-- <option value="">-- Select Small Category --</option> -->
                         </select>
                     </form>
                     <hr>
                     <!------------------------------------------------------------------- -->
 
+                    <form th:action="@{/seller/item/deleteitem.do}" method="post">
+                        <input type="hidden" name="btn" id="btn"/>
+                        <a th:href="@{/seller/item/insert.do}"><button class="btn btn-primary">물품등록</button></a>
+                        <button class="btn btn-primary" value="일괄수정" onclick="updateItemAction()">수정</button>
+                        <button class="btn btn-primary" value="일괄삭제" onclick="deleteItemAction()">삭제</button>
 
-                    <a th:href="@{/seller/item/insert.do}"><button class="btn btn-primary">물품등록</button></a>
-                    <button class="btn btn-primary">수정</button></a>
-                    <button class="btn btn-primary">삭제</button>
-                    <hr>
-
+                    </form>
+                    
                     <form th:action="@{/seller/item/management.do}" method="post" id="form2">
+                        <hr>
+                        
                         <div class="row">
                             <div class="col">
                                 <div class="card mb-4">
@@ -212,7 +117,6 @@
                                             </tfoot>
                                             <tbody>
                                                 <tr th:each="obj : ${list}" style="text-align: center;">
-                                                    <!-- <td><input type="checkbox" name="chk[]" th:value="${tmp.no.longValue()}"/></td> -->
                                                     <td><input type="checkbox" name="chk[]" th:value="${obj.no.longValue()}"/></td>
                                                     <td th:text="${obj.no.longValue()}" id="itemno">물품번호</td>
                                                     <td th:text="${obj.name}"></td>
@@ -240,20 +144,29 @@
 
                 </div>
             </main>
-            <footer class="py-4 bg-light mt-auto">
-                <div class="container-fluid py-5">
-                    <div class="d-flex justify-content-between align-items-center small">
-                        <div class="text-muted">Copyright &copy; PKNU 2023.</div>
-                        <div>
-                            <a href="#!">Privacy Policy</a> &middot; <a href="#!">Terms</a> &amp; <a
-                                href="#!">Conditions</a>
-                        </div>
-                    </div>
-                </div>
-            </footer>
+            <!-- footer -->
+            <th:block th:replace="~{/mj/seller/footer :: footerHTML}"></th:block>
         </div>
     </div>
+    <script>
+        const btn   = document.getElementById('btn');
+        const form2 = document.getElementById('form2');
+    
+        function deleteItemAction(){
+            if( confirm('삭제하시겠습니까?') ){
+                btn.value='일괄삭제';
+                console.log(btn.value);
+                form2.submit();
+            }
+        }
 
+        function updateItemAction(){
+                btn.value='일괄수정';
+                form2.submit();
+        }
+    
+    
+    </script>
 
 
     <!-- 6. Bootstrap용 js -->
